Reorganized the app to use Fragments and added Menu Options

--- a/app/src/main/res/layout/fragment_movie_list.xml
+++ b/app/src/main/res/layout/fragment_movie_list.xml
@@ -1,13 +1,11 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<GridView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/gridView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.pbhopalka.popularmovies.MovieListFragment">
+    android:numColumns="auto_fit"
+    android:stretchMode="columnWidth"
+    android:gravity="center" >
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
-
-</FrameLayout>
+</GridView>
