--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -1,74 +1,151 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.pbhopalka.popularmovies.MovieDetails">
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:fillViewport="true" >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Movie Name"
-        android:id="@+id/movieName"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:textSize="50sp" />
-
-    <RelativeLayout
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/movieName"
-        android:layout_alignParentStart="true">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/imageView"
+        tools:context="com.example.pbhopalka.popularmovies.MovieDetails">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="150sp"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Movie Name"
+            android:id="@+id/movieName"
+            android:background="@android:color/holo_green_light"
+            android:textColor="@android:color/white"
             android:layout_alignParentTop="true"
             android:layout_alignParentStart="true"
-            android:scaleType="centerInside"
-            android:adjustViewBounds="true"/>
+            android:gravity="bottom"
+            android:padding="10dp"
+            android:visibility="visible" />
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/movieName"
+            android:id="@+id/relativeLayout"
+            android:layout_alignParentStart="true">
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:weightSum="2"
+                android:id="@+id/linearLayout">
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/poster"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentStart="true"
+                    android:scaleType="centerInside"
+                    android:adjustViewBounds="true"
+                    android:minWidth="240dp"
+                    android:minHeight="160dp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_toRightOf="@+id/linearLayout"
+                android:layout_alignBottom="@id/linearLayout"
+                android:padding="10dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Year"
+                    android:id="@+id/year"
+                    android:layout_alignParentTop="true"
+                    android:layout_toEndOf="@+id/poster"
+                    android:textSize="25sp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Rating"
+                    android:id="@+id/rating"
+                    android:layout_below="@+id/year"
+                    android:layout_toRightOf="@+id/poster"
+                    android:layout_alignParentStart="true"
+                    android:textSize="20sp" />
+
+            </LinearLayout>
+
+
+        </RelativeLayout>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Year"
-            android:id="@+id/year"
-            android:layout_alignParentTop="true"
-            android:layout_toEndOf="@+id/imageView"
-            android:textSize="40sp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="RunningTime"
-            android:id="@+id/runningTime"
-            android:layout_below="@+id/year"
-            android:layout_alignParentStart="true"
-            android:textSize="20sp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Rating"
-            android:id="@+id/rating"
-            android:layout_below="@+id/runningTime"
-            android:layout_alignParentStart="true" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Rating"
+            android:text="Overview"
             android:id="@+id/synopsis"
-            android:layout_below="@+id/imageView"
+            android:layout_below="@+id/relativeLayout"
+            android:padding="20dp"
             android:layout_alignParentStart="true" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Trailer"
+            android:id="@+id/trailer_title"
+            android:layout_below="@+id/synopsis"
+            android:paddingTop="5dp"
+            android:paddingLeft="20dp"
+            android:layout_alignParentStart="true" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="Trailer 1"
+            android:id="@+id/trailer1"
+            android:padding="20dp"
+            android:layout_below="@+id/trailer_title"
+            android:layout_alignParentStart="true" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="Trailer 2"
+            android:id="@+id/trailer2"
+            android:padding="20dp"
+            android:layout_below="@+id/trailer1"
+            android:layout_alignParentStart="true" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Review"
+            android:id="@+id/review_title"
+            android:paddingLeft="20dp"
+            android:paddingTop="5dp"
+            android:layout_below="@+id/trailer2"
+            android:layout_alignParentStart="true" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="Review text"
+            android:id="@+id/review"
+            android:padding="20dp"
+            android:layout_below="@+id/review_title"
+            android:layout_alignParentStart="true" />
+
 
     </RelativeLayout>
-
-
-</RelativeLayout>
+</ScrollView>
