--- a/app/src/main/res/xml/pref_headers.xml
+++ b/app/src/main/res/xml/pref_headers.xml
@@ -4,17 +4,7 @@
 
     <header
         android:fragment="com.example.pbhopalka.popularmovies.SettingsActivity$GeneralPreferenceFragment"
-        android:title="@string/pref_header_general"
-        android:icon="@drawable/ic_info_black_24dp" />
-
-    <header
-        android:fragment="com.example.pbhopalka.popularmovies.SettingsActivity$NotificationPreferenceFragment"
-        android:title="@string/pref_header_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp" />
-
-    <header
-        android:fragment="com.example.pbhopalka.popularmovies.SettingsActivity$DataSyncPreferenceFragment"
-        android:title="@string/pref_header_data_sync"
-        android:icon="@drawable/ic_sync_black_24dp" />
+        android:icon="@drawable/ic_info_black_24dp"
+        android:title="@string/pref_header_general" />
 
 </preference-headers>
