--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,14 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    
+    <!-- Base application theme. -->
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+       <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+       <item name="colorAccent">@color/colorAccent</item>
+    </style>
 
-
-
-            <!-- Base application theme. -->
-            <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-                <!-- Customize your theme here. -->
-               <item name="colorPrimary">@color/colorPrimary</item>
-                <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-               <item name="colorAccent">@color/colorAccent</item>
-           </style>
+    <style name="Divider">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">2dp</item>
+        <item name="android:minHeight">1dp</item>
+        <item name="android:layout_margin">10dp</item>
+        <item name="android:background">@color/colorDividerColor</item>
+    </style>
+    
 
 </resources>
