--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,5 @@
     <color name="colorSecondaryText">#757575</color>
     <color name="colorText">#FFFFFF</color>
     <color name="colorDividerColor">#BDBDBD</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#FFC107</color>
 </resources>
