--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,16 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/container"
-    android:layout_width="match_parent" android:layout_height="match_parent"
-    tools:context=".MainActivity" tools:ignore="MergeRootFrame" >
+<fragment
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/container"
+    android:name="com.example.pbhopalka.popularmovies.MovieListFragment"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:layout="@android:layout/simple_gallery_item"
+    tools:context=".MainActivity"
+    tools:ignore="MergeRootFrame" >
 
 
 
-</FrameLayout>
+</fragment>
 
     <!--tools:context="com.example.pbhopalka.popularmovies.MainActivity"> -->
