--- a/app/src/main/res/layout/activity_list_view.xml
+++ b/app/src/main/res/layout/activity_list_view.xml
@@ -3,6 +3,7 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:id="@+id/favorites_list"
     android:textAppearance="?android:attr/textAppearanceMedium"
     android:text="@string/no_favorites"
     android:paddingStart="20dp"
