--- a/app/src/main/res/layout/activity_favorite_movies.xml
+++ b/app/src/main/res/layout/activity_favorite_movies.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     tools:context="com.example.pbhopalka.popularmovies.FavoriteMovies">
 
-    <TextView
+   <!-- <TextView
         android:layout_width="match_parent"
         android:layout_height="100sp"
         android:textAppearance="?android:attr/textAppearanceLarge"
@@ -17,14 +17,13 @@
         android:layout_alignParentStart="true"
         android:gravity="bottom"
         android:padding="10dp"
-        android:visibility="visible" />
+        android:visibility="visible" />-->
 
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/favoriteList"
         android:layout_margin="10dp"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/favorite_title" />
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
